--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-spring/three": "^9.7.3",
+    "@react-three/drei": "^9.106.0",
     "@react-three/fiber": "^8.16.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
